--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,5 +19,6 @@ jobs:
       - name: Merge Upstream Changes
         run: |
           git checkout main
+          git fetch upstream main
           git merge upstream/main
           git push origin main
